# Chess-Bot

./: CMakeLists.txt  attack.c  attack.h  board.h  build.bash  build.json  build.py  chess.c  chess.h  chess_gui  chess_gui.c  fen.h  move.c  move.h  move_generation.c  move_generation.h  move_validation.c  move_validation.h  readme.md  todo  tournament  tournament.c  transpo_test_2.c  uci.c  uci.h  v0.bot
bots/: alpha_beta.h  debug.h  iterative_deepening.c  minmax old.c  minmax.c  minmax.h  quiescence.c  randbot.c  static_eval.c  transposition_table.c  zobrist.h
chess-bot/: build_bot.py  v0.bot
chess-bot/include/: bot-types.h  bot.h  butterfly-board.h  debug.h  eval.h  iterative-deepening.h  killer_moves.h  move-order.h  move_order.h  search.h  see.h  static-evaluation.h  static-exchange-evaluation.h  super-simple-transposition-table.h  transpo-table.h  transposition-table.h  transposition_table.h  worker.h
chess-bot/src/: bot.c  butterfly-board.c  eval.c  interface.c  iterative-deepening.c  move-order.c  move_order.c  search.c  (+8 more)
chess-lib/: build_lib.py
include/: bot.h  eval.h  killer_moves.h  move_order.h  search.h  see.h  transposition_table.h
monte-carlo-bot/: test_MCTS.c
mylib/: Arena.c  Panic.h  Slice.h  String.h
scripts/: piece_square_table_generator.c  seive.c  start_board.c  vector_attack.c  zobrist_number_generator.c
src/: bot.c  eval.c  interface.c  move_order.c  search.c  see.c  transposition_table.c  uci.c  worker.c
tests/: botvbot.c  chess.c  test_correctness.c  test_is_check.c  test_is_legal.c  test_move_gen.c  test_performance.c  testbot.c
(+110 files in other folders)
